# Minesweeper

./: .coverage  .coveragerc  .env  .env.test  .gitignore  .pylintrc  README.md  minesweeper_suunnitelma.txt  pyproject.toml  tasks.py
data/: test.db
documentation/: arkkitehtuurikuvaus.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/poetry-testi/: pyproject.toml
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/Maksukortti/: pyproject.toml
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko3/: Machine-sekvenssikaavio.txt  Matkakortti-sekvenssikaavio  Matkakortti-sekvenssikaavio.txt  Matkakortti-sekvenssikaavio_ei_valmis  laajennettu_monopoli.md  machine_sekvenssikaavio  monopoli.md
src/: config.py  constants.py  db_connection.py  field.py  index.py  initialize_database.py  main.py
src/enums/: grid_enum.py  mouse_enum.py  ui_grid_enum.py
src/menu/: menu.py
src/pygame/: game.py
src/repositories/: leaderboard_repository.py
src/services/: check_if_mine.py  clicks.py  clock.py  field.py  game.py  game_loop.py  grid.py  mouse_enum.py  mouse_event.py
src/sprites/: flag.py  mine.py
src/tests/: click_test.py  field_test.py  game_test.py  mine_check_test.py
src/tests/other/: constants_test.py
src/tests/repositories/: leaderboard_repository_test.py
src/tests/services/: click_test.py  clock_test.py  field_test.py  game_test.py  grid_test.py
src/ui/: draw_game.py  game.py  game_ui.py  load_images.py  menu.py  mouse_event.py  program_ui.py  renderer.py  scaling.py  ui_grid.py
(+3 files in other folders)
