[tool.poetry]
name = "morjensta"
version = "1.09"
description = ""
authors = ["thefakejj <jasper.laurila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
